hero content complete

--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
   <main>
 
     <section class="hero" id="myHome">
-
+      <div class="hero-content">
+        <div class="top-section">
+          Hi, I'm Zach
+        </div>
+        <div class="middle-section">
+          Thanks for checking out my website! I am a highly motivated Software Developer at Clemson University. Learn more about me below!
+        </div>
+        <div class="bottom-section">
+          <button class="experience-btn" onclick="navTo('myExperience')">
+            Experience
+          </button>
+        </div>
+      </div>
     </section>
 
     <section class="about" id="myAbout">
