About section complete

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           Thanks for checking out my website! I am a highly motivated Software Developer at Clemson University. Learn more about me below!
         </div>
         <div class="bottom-section">
-          <button class="experience-btn" onclick="navTo('myExperience')">
+          <button class="btn experience-btn" onclick="navTo('myExperience')">
             Experience
           </button>
         </div>
@@ -82,7 +82,46 @@
     </section>
 
     <section class="about" id="myAbout">
-
+      <div class="about-content">
+        <h1 class="section-header">
+          About Me
+        </h1>
+        <div class="about-main-container">
+          <div class="description">
+            <h3 class="secondary-header">
+              Get to know me!
+            </h3>
+            <p class="about-text">I'm a Software Developer focused on <strong>Full Stack Web Development</strong>. I am currently a senior at <strong>Clemson University</strong> College of Engineering, Computing, and Applied Sciences, working towards a B.S. in Computer Information Systems.</p>
+            <p class="about-text">I am passionate about Software Development and continuing to <strong>grow</strong> in my craft. I am very motivated, aware of details, and have great time management skills. I am a team player and love to learn from others. I always welcome constructive criticism!</p>
+            <p class="about-text">When I'm not looking at a screen, I love to play guitar, play disc golf, hang out with friends, snowboard, and I love sports. I am a Christian who loves to serve the local church and advance the gospel. I'm the worship leader at Clemson FCA and serve on the worship arts team at NewSpring Church of South Carolina.</p>
+            <button class="btn contact-btn">
+              Contact
+            </button>
+          </div>
+          <div class="skills">
+            <h3 class="secondary-header">My Skills</h3>
+            <div class="skill-chips">
+              <div class="chip">HTML</div>
+              <div class="chip">CSS</div>
+              <div class="chip">JavaScript</div>
+              <div class="chip">TypeScript</div>
+              <div class="chip">Angular</div>
+              <div class="chip">React</div>
+              <div class="chip">C#</div>
+              <div class="chip">.NET</div>
+              <div class="chip">Node</div>
+              <div class="chip">Express</div>
+              <div class="chip">Redis</div>
+              <div class="chip">MSSQL</div>
+              <div class="chip">MySQL</div>
+              <div class="chip">AWS</div>
+              <div class="chip">Agile Methodologies</div>
+              <div class="chip">Responsive Design</div>
+              <div class="chip">GitHub</div>
+            </div>    
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="experience" id="myExperience">
