experience section done

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           Thanks for checking out my website! I am a highly motivated Software Developer at Clemson University. Learn more about me below!
         </div>
         <div class="bottom-section">
-          <button class="btn experience-btn" onclick="navTo('myExperience')">
-            Experience
+          <button class="btn about-btn" onclick="navTo('myAbout')">
+            About
           </button>
         </div>
       </div>
@@ -125,11 +125,27 @@
     </section>
 
     <section class="experience" id="myExperience">
-
+      <div class="experience-content">
+        <h1 class="section-header">My Experience</h1>
+        <div class="work-container">
+          <div class="work-info">
+            <img class="company-img" src="./assets/KH.jpg" alt="Kimley-Horn Logo">
+            <div class="company-name"><strong>Kimley-Horn </strong>&#8226; <span class="position-title">Software Developer Intern</span></div>
+            <div class="work-location">Raleigh, NC &nbsp;&nbsp; May 2022-August 2022</div>
+            <div class="work-description">Further developed my full stack web development skills using Angular, ASP.Net Web API's, JavaScript, TypeScript, C#, Microsoft SQL Server and Azure DevOps. Gained exposure working with internal clients and performing requirement analysis based on internal needs within the company..</div>
+          </div>
+          <div class="work-info">
+            <img class="company-img" src="./assets/SE.jpg" alt="Schneider Electric Logo">
+            <div class="company-name"><strong>Schneider Electric </strong>&#8226; <span class="position-title">Software Engineer Intern</span></div>
+            <div class="work-location">Seneca, SC &nbsp;&nbsp; May 2021-August 2021</div>
+            <div class="work-description">Gained skills and experience in full stack web development utilizing Vue.js, Node.js, and Express.js JavaScript Frameworks. Got hands on experience and familiarity with Microsoft SQL Server, Git, Github, and Azure DevOps.</div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="contact" id="myContact">
-
+      
     </section>
 
   </main>
