--- a/index.html
+++ b/index.html
@@ -168,7 +168,24 @@
   </main>
 
   <footer class="footer">
-
+    <div class="footer-container">
+      <div class="footer-header">
+        Zachary Clay
+      </div>
+      <div class="footer-links">
+        <a href="https://www.linkedin.com/in/zachary-clay-027215203/" target="_blank">
+          <img src="./assets/LinkedIn.png" alt="LinkedIn">
+        </a>
+        <a href="https://github.com/Zach-Clay" target="_blank">
+          <img src="./assets/Github.png" alt="Github">
+        </a>
+        <a href="https://www.instagram.com/zachclay__/" target="_blank">
+          <img src="./assets/Instagram.png" alt="Instagram">
+        </a>
+      </div>
+      <div class="horizontal-line"></div>
+      <p class="copyright-text">Copyright &copy; Zachary Clay 2022</p>
+    </div>
   </footer>
 
 </body>
