--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           Hi, I'm Zach
         </div>
         <div class="middle-section">
-          Thanks for checking out my website! I am a highly motivated Software Developer currently attending Clemson University. Learn more about me below!
+          Thanks for checking out my website! I am a highly motivated Software Developer currently attending Clemson University. Learn more about me and my skills below!
         </div>
         <div class="bottom-section">
           <button class="btn about-btn" onclick="navTo('myAbout')">
@@ -168,16 +168,16 @@
         <h1 class="section-header">Contact</h1>
         <p class="contact-description">Feel free to contact me by email or phone</p>
         <div class="contact-container">
-          <div class="contact-phone">
-            <i class="fa fa-mobile fa-7x" aria-hidden="true"></i>
-            <div class="contact-value">
-              <a href="tel:+19126041301">(912) 604-1301</a>
-            </div>
-          </div>
           <div class="contact-email">
             <i class="fa fa-envelope fa-7x" aria-hidden="true"></i>
             <div class="contact-value">
               <a href="mailto:zachclayc130@gmail.com">zachclayc130@gmail.com</a>
+            </div>
+          </div>
+          <div class="contact-phone">
+            <i class="fa fa-mobile fa-7x" aria-hidden="true"></i>
+            <div class="contact-value">
+              <a href="tel:+19126041301">(912) 604-1301</a>
             </div>
           </div>
         </div>
