added animated arrow

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <button class="btn about-btn" onclick="navTo('myAbout')">
             About
           </button>
+          <i class="fa-sharp fa-solid fa-arrow-down fa fa-2x fa-bounce" onclick="navTo('myAbout')"></i>
         </div>
       </div>
 
