--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </h3>
             <p class="about-text">I'm a Software Developer focused on <strong>Full Stack Web Development</strong>. I am currently a senior at <strong>Clemson University</strong> College of Engineering, Computing, and Applied Sciences, working towards a B.S. in Computer Information Systems.</p>
             <p class="about-text">I am passionate about Software Development and continuing to <strong>grow</strong> in my craft. I am very motivated, aware of details, and have great time management skills. I am a team player and love to learn from others. I always welcome constructive criticism!</p>
-            <p class="about-text">When I'm not looking at a screen, I love to play guitar, play disc golf, hang out with friends, snowboard, and I love sports. I am a Christian who loves to serve the local church and advance the gospel. I'm the worship leader at Clemson FCA and serve on the worship arts team at NewSpring Church of South Carolina.</p>
+            <p class="about-text">When I'm not looking at a screen, I love to play guitar, disc golf, hang out with friends, snowboard, and I love sports in general. I am a Christian who loves to serve the local church and advance the gospel. I'm the worship leader at Clemson FCA and serve on the worship arts team at NewSpring Church of South Carolina.</p>
             <button class="btn contact-btn" onclick="navTo('myContact')">
               Contact
             </button>
